[gd_scene load_steps=4 format=3 uid="uid://em1kgkfbp8u3"]

[ext_resource type="Script" path="res://Scripts/Hand.gd" id="1_q730w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_coji8"]
bg_color = Color(0.659924, 0.351199, 0.00334143, 1)
border_width_left = 10
border_width_top = 3
border_width_right = 10
border_width_bottom = 3
border_color = Color(0, 0.0156863, 0.239216, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_size = 10
shadow_offset = Vector2(5, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u58hu"]
size = Vector2(1488.99, 198)

[node name="PlayerHand" type="Node2D"]
script = ExtResource("1_q730w")

[node name="PlayArea" type="Panel" parent="."]
custom_minimum_size = Vector2(1500, 210)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -410.0
offset_top = -87.5
offset_right = 190.0
offset_bottom = -87.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_coji8")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-116.5, -89)
scale = Vector2(1.00135, 1)
shape = SubResource("RectangleShape2D_u58hu")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-825, -146)
gizmo_extents = 59.5

[node name="HandGainPosition" type="Marker2D" parent="."]
position = Vector2(-43, -310)
gizmo_extents = 59.5

[node name="CoinPlacementPosition" type="Marker2D" parent="."]
position = Vector2(-800, -310)
gizmo_extents = 59.5

[connection signal="child_entered_tree" from="PlayArea" to="." method="_on_play_area_child_entered_tree"]
[connection signal="child_order_changed" from="PlayArea" to="." method="_on_play_area_child_order_changed"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
